# minimatrix

./: CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  runcli.sh
.github/workflows/: buildmultiarchandpush.yml
minimatrix/: __init__.py  cli.py  config.py  jwt_login.py  matrix_client.py  sso_login.py
repo_scripts/: build-container-multiarch.sh  update_badge.py
tests/: __init__.py  test_cli.py  test_config.py  test_init.py  test_sso_login.py
